--- a/views/layouts/scripts.ejs
+++ b/views/layouts/scripts.ejs
@@ -12,7 +12,7 @@
     $( "#floatingDob" ).datepicker({
         changeMonth: true,
         changeYear: true,
-        dateFormat: 'dd-mm-yy'
+        dateFormat: 'dd/mm/yy'
     });
   });
   </script>
