--- a/views/register.ejs
+++ b/views/register.ejs
@@ -159,9 +159,9 @@ body {
     
     <div class="form-floating mb-2 col-lg-6">
       
-      <input type="text" class="form-control" id="floatingDob" name="dob" value="<%= students.dob %>" required>
+      <input type="text" class="form-control" id="floatingDate" name="dob" value="<%= students.dob %>" required>
       
-      <label for="floatingDob" class="fw-light">Date of Birth <span class="text-danger fw-bold"> *</span></label>
+      <label for="floatingDate" class="fw-light">Date of Birth(dd/mm/yyyy) <span class="text-danger fw-bold"> *</span></label>
       
     </div>
     
