--- a/views/studentLogin.ejs
+++ b/views/studentLogin.ejs
@@ -45,9 +45,9 @@
     
     <div class="form-floating mb-2">
       
-      <input type="text" class="form-control" id="floatingDob" placeholder="dob" name="dob" required>
+      <input type="text" class="form-control" id="floatingDate" placeholder="dob" name="dob" required>
       
-      <label for="floatingDob">Date of Birth (dd-mm-yyyy)</label>
+      <label for="floatingDate">Date of Birth (dd/mm/yyyy)</label>
       
     </div>
 
