--- a/views/viewAllFeeReceived.ejs
+++ b/views/viewAllFeeReceived.ejs
@@ -22,7 +22,7 @@
 
     <div class="text-center table-responsive">
       
-         <p class="text-secondary fw-normal"><%= viewTitle %> wef: 01/01/2021  </p>
+         <p class="text-secondary fw-normal"><%= viewTitle %> wef: 01/01/2020  </p>
     
     </div>
     
@@ -69,7 +69,7 @@
                                 
                                 for (var k=0; k < students[i].studentFee.length; k++) {
                  
-                                    if(students[i].studentFee[k] != undefined && students[i].studentFee[k].dateofpayment >=  moment().format('2021-01-01')) {
+                                    if(students[i].studentFee[k] != undefined && moment(students[i].studentFee[k].dateofpayment).format('YYYY-MM-DD') >=  moment().format('2020-01-01')) {
                                         
                                         serialNos++;
               
@@ -100,11 +100,9 @@
                           <td class="border">  <%= capitalizeFirstLetter(students[i].studentFee[k].verifierId.username) %> </td>
         
                         </tr>
-                        
-                       
                             
                        <% } } } } %>
-                        
+                       
                       </tbody>
                       
                     </table>
