--- a/views/viewFee.ejs
+++ b/views/viewFee.ejs
@@ -39,9 +39,9 @@
                   
                 <i class="fas fa-calendar-check fw-bold text-primary me-1"></i> 
                 
-                <input type="text" id="floatingDob" style="width: 150px" placeholder="dd-mm-yyyy" class="form-control ms-2 dateSelect" required />
+                <input type="date" id="floatingDate" style="width: 180px" placeholder="dd/mm/yyyy" class="form-control ms-2 dateSelect" required autocomplete="off"/>
                 
-                <a href="/viewFee/viewFeeByDate" id="searchFeeByDate" class="btn btn-primary ms-2"> View By Date</a>
+                <a href="/viewFee/viewFeeByDate" id="searchFeeByDate" class="btn btn-primary ms-2"> Search From</a>
               
               </li>
               
