--- a/views/viewAllFeeReceived.1.ejs
+++ b/views/viewAllFeeReceived.1.ejs
@@ -13,17 +13,16 @@
     
 <main class="container">
     
-    
-      <div class="d-flex justify-content-between m-3">
+<div class="d-flex justify-content-between m-3">
             
             <a class="text-primary small" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Goto view fee" href="/viewFee"><i class="fas fa-arrow-left text-dark fw-bold"></i> Go back</i> </a>
             
-            </div>   
-  
+            </div>    
+    
 
-    <div class="text-center">
+    <div class="text-center table-responsive">
       
-         <p class="text-secondary fw-normal"><%= viewTitle %> Wef: 01/01/2020  </p>
+         <p class="text-secondary fw-normal"><%= viewTitle %> wef: 01/01/2020  </p>
     
     </div>
     
@@ -39,11 +38,13 @@
                      
                     <tr class="text-center">
                         
-                      <th class="bgColor" colspan="7"> Other Fee Statement</th>
+                      <th class="bgColor" colspan="7"> Monthly Fee Statement</th>
                       
                     </tr>
                     
                     <tr class="bg-light">
+                      
+                      <td class="fw-normal border align-middle"> Sl. Nos</td>
                       
                       <td class="fw-normal border align-middle"> Regn. </td>
                       
@@ -55,28 +56,30 @@
                       
                       <td class="fw-normal border align-middle"> Date of Payment </td>
                       
-                      <td class="fw-normal border align-middle"> Remarks </td>
-                      
                       <td class="fw-normal border align-middle"> Entered By </td>
       
                     </tr>
                     
               <%  
-              
+                            var serialNos = 0;
+                            
                             for (var i=0; i < students.length; i++) {
                                 
-                                if( students[i].studentOtherFee != undefined ) {
+                                if( students[i].studentFee != undefined ) {
                                 
-                                for (var k=0; k < students[i].studentOtherFee.length; k++) {
+                                for (var k=0; k < students[i].studentFee.length; k++) {
                  
-                                    if(students[i].studentOtherFee[k] != undefined && moment(students[i].studentOtherFee[k].dateofpayment).format('YYYY-MM-DD') >=  moment().format('2020-01-01')) {
-              
-              
+                                    if(students[i].studentFee[k] != undefined && moment(students[i].studentFee[k].dateofpayment).format('YYYY-MM-DD') >=  moment().format('2020-01-01')) {
+                                        
+                                        serialNos++;
+                                        
               %>
               
                         <tr>
                           
-                          <td class="text-center border" ><%= students[i].regn %></td>
+                          <td class="text-center border" ><%= serialNos %></td>
+                          
+                          <td class="text-center border" ><%= students[i].regn  %></td>
                           
                           <td class="border" >
                             
@@ -88,20 +91,17 @@
                             
                           </td>
                           
-                          <td class="border fst-italic"> <%= students[i].studentOtherFee[k].narrationInput %> </td>
+                          <td class="border fst-italic"> <%= students[i].studentFee[k].narrationInput %> </td>
                           
-                          <td class="border">Rs.  <%= students[i].studentOtherFee[k].feeAmount %> </td>
+                          <td class="border">Rs.  <%= students[i].studentFee[k].feeAmount %> </td>
                       
-                          <td class="border"><%= convertDate(students[i].studentOtherFee[k].dateofpayment) %></td>
+                          <td class="border"><%= students[i].studentFee[k].dateofpayment %></td>
                           
-                          <td class="border text-success"><%= capitalizeFirstLetter(students[i].studentOtherFee[k].remarks) %></td>
-                          
-                          <td class="border">  <%= capitalizeFirstLetter(students[i].studentOtherFee[k].verifierId.username) %> </td>
+                          <td class="border">  <%= capitalizeFirstLetter(students[i].studentFee[k].verifierId.username) %> </td>
         
                         </tr>
-                        
+                            
                        <% } } } } %>
-                       
                        
                       </tbody>
                       
