--- a/views/viewFeeByDate.ejs
+++ b/views/viewFeeByDate.ejs
@@ -21,7 +21,7 @@
 
     <div class="text-center mt-2">
         
-         <p class="text-secondary fw-normal"><%= viewTitle %> : <span class="text-danger"><%= searchDate %> </span></p>
+         <p class="text-secondary fw-normal"><%= viewTitle %> : <span class="text-danger"><%= convertDate(searchFromDate) %> </span></p>
     
     </div>
     
@@ -64,7 +64,7 @@
           
                     for (var k=0; k < students[i].studentFee.length; k++) {
                         
-                        if( students[i].studentFee[k] != undefined && students[i].studentFee[k].dateofpayment ==  searchDate ) {
+                        if( students[i].studentFee[k] != undefined && moment(students[i].studentFee[k].dateofpayment).format('YYYY-MM-DD') >=  searchFromDate ) {
               
               %>
               
@@ -151,7 +151,7 @@
           
                     for (var k=0; k < students[i].studentExamFee.length; k++) {
                         
-                        if( students[i].studentExamFee[k] != undefined && students[i].studentExamFee[k].dateofpayment ==  searchDate ) {
+                        if( students[i].studentExamFee[k] != undefined && moment(students[i].studentExamFee[k].dateofpayment).format('YYYY-MM-DD') >=  searchFromDate ) {
                             
                             
               
@@ -241,7 +241,7 @@
           
                     for (var k=0; k < students[i].studentOtherFee.length; k++) {
                         
-                        if( students[i].studentOtherFee[k] != undefined && students[i].studentOtherFee[k].dateofpayment == searchDate ) {
+                        if( students[i].studentOtherFee[k] != undefined && moment(students[i].studentOtherFee[k].dateofpayment).format('YYYY-MM-DD') >= searchFromDate ) {
                             
               %>
               
